# Denso-DigitalReader

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Denso-DigitalReader.drawio.xml  README.md  build.rs
docs/: ARCHITECTURE.md  Denso-DigitalReader-DataModel.drawio  Denso-DigitalReader-Schema.drawio  GPU_SETUP.md  colortheme-ref.txt
docs/superpowers/plans/: 2026-06-29-ai-project-structure.md  2026-06-29-color-theme.md  2026-06-29-hardware-spec.md  2026-06-29-network-status.md  2026-06-29-resolution-picker.md  2026-06-29-tabbar-settings.md  2026-06-30-camera-management-slice3-configure.md  2026-06-30-rust-to-cpp-qt-port.md  2026-07-01-per-camera-detection.md  2026-07-02-models-ensemble-class-centric.md  2026-07-02-startup-warmup-splash.md  2026-07-02-ui-refresh-rounded-friendly.md
docs/superpowers/specs/: 2026-06-29-ai-project-structure-design.md  2026-06-29-color-theme-design.md  2026-06-29-hardware-spec-design.md  2026-06-29-network-status-design.md  2026-06-29-resolution-picker-design.md  2026-06-29-tabbar-settings-design.md  2026-06-30-camera-management-slice2-design.md  2026-06-30-camera-management-slice3-configure-design.md  2026-06-30-ip-camera-channel-stream-manufacturer-fields-design.md  2026-06-30-rust-to-cpp-qt-port-design.md  2026-07-01-per-camera-detection-design.md  2026-07-02-models-ensemble-class-centric-design.md  2026-07-02-startup-warmup-splash-design.md  2026-07-02-ui-refresh-rounded-friendly-design.md
src/: db.rs  hardware.rs  main.cpp  main.rs  settings.rs  wiring.rs
src/app/: CMakeLists.txt  main.cpp  resources.qrc
src/app/ui/: camera_devices.cpp  camera_dialog.cpp  camera_dialog.h  camera_view.cpp  camera_view.h  ip_scan.cpp  mainwindow.cpp  mainwindow.h  netcard.cpp  netcard.h  rtsp_templates.cpp  settings_dialog.cpp  startup.cpp  startup.h  startup_screen.cpp  startup_screen.h  theme.cpp  warmup_worker.cpp  warmup_worker.h
src/app/ui/camera/: camera_devices.cpp  camera_dialog.cpp  camera_dialog.h  camera_view.cpp  camera_view.h  frame_convert.h  ip_scan.cpp  ip_scan.h  rtsp_templates.cpp  rtsp_templates.h  snapshot.cpp  snapshot.h
src/app/ui/camera/dialog/: add_page.cpp  add_page.h  areas_page.cpp  areas_page.h  camera_devices.cpp  camera_devices.h  configure_page.cpp  configure_page.h  ip_scan.cpp  list_page.cpp  list_page.h  models_page.cpp  models_page.h  page_util.cpp  page_util.h  roi_canvas.cpp  roi_canvas.h  wizard_stepper.cpp  wizard_stepper.h
src/app/ui/camera/grid/: camera_grid.cpp  camera_grid.h  camera_stream.cpp  camera_stream.h  camera_tile.cpp  camera_tile.h  fps_meter.cpp  fps_meter.h  frame_processor.cpp  frame_processor.h  grid_layout.cpp  grid_layout.h
src/app/ui/camera/shared/: frame_convert.cpp  frame_convert.h  gst_pipeline.cpp  gst_pipeline.h  roi_geometry.cpp  roi_geometry.h  rtsp_templates.cpp  rtsp_templates.h  snapshot.cpp  snapshot.h
src/app/ui/camera/shared/detection/: engine_registry.cpp  engine_registry.h  inference_engine.h  letterbox.cpp  letterbox.h  merge_detections.cpp  merge_detections.h  model_sync.cpp  model_sync.h  names_metadata.cpp  names_metadata.h  ort_engine.cpp  ort_engine.h  yolo_decode.cpp  yolo_decode.h
src/app/ui/settings/: netcard.cpp  settings_dialog.cpp
src/core/: CMakeLists.txt
src/core/camera/: area_geometry.cpp  area_geometry.h  area_points.cpp  area_points.h  model.h  repo.cpp  repo.h
src/core/db/: db.cpp  db.h
src/core/detection/: class_names.cpp  class_names.h  detection.h  repo.cpp  repo.h
src/core/hardware/: collect.h  format.cpp  format.h
src/core/network/: backend.h  model.h  parse.cpp  repo.cpp  repo.h  wifi.cpp
src/core/network/linux/: linux_backend.cpp  nmcli.cpp
src/core/network/windows/: netsh.cpp  parse.cpp  wifi.cpp  windows_backend.cpp
src/core/settings/: settings.cpp  settings.h
src/core/ui/: convert.cpp  convert.h
src/core/util/: strutil.h
src/db/: db.cpp  migrations.rs  mod.rs
src/hardware/: collect.cpp  mod.rs  model.rs  repo.rs
src/network/: backend.cpp  config.rs  linux.rs  linux_backend.cpp  mod.rs  model.rs  netsh.cpp  netsh.h  nmcli.cpp  nmcli.h  parse.h  repo.cpp  repo.rs  wifi.h  windows.rs  windows_backend.cpp
src/network/windows/: mod.rs  netsh.rs  parse.rs  wifi.rs
src/reader/: mod.rs  model.rs  repo.rs
src/settings/: mod.rs  model.rs  repo.cpp  repo.h  repo.rs
src/ui/: camera_dialog.h  mainwindow.h  netcard.h  settings_dialog.cpp  settings_dialog.h  theme.h  viewmodel.h
src/wiring/: convert.rs  mod.rs
tests/: CMakeLists.txt  test_area_geometry.cpp  test_area_points.cpp  test_camera_repo.cpp  test_class_names.cpp  test_convert.cpp  test_db.cpp  test_detection_repo.cpp  test_format.cpp  test_fps_meter.cpp  test_frame_convert.cpp  test_grid_layout.cpp  test_gst_pipeline.cpp  test_letterbox.cpp  test_main.cpp  test_merge_detections.cpp  test_names_metadata.cpp  test_netsh.cpp  test_network_repo.cpp  test_nmcli.cpp  test_parse.cpp  test_reassert.cpp  test_roi_geometry.cpp  test_rtsp_templates.cpp  test_settings.cpp  test_settings_repo.cpp  test_snapshot.cpp  test_wifi.cpp  test_yolo_decode.cpp
tools/: build_trt_engine.sh
ui/: app-window.slint  camera-modal.slint  settings-modal.slint  theme.slint
ui/settings/: about.slint  appearance.slint  display.slint  network.slint  system.slint
ui/widgets/: close-glyph.slint  eyebrow.slint  gold-button.slint  help-hint.slint  nav-item.slint  spec-row.slint  text-button.slint
